fixed toolitp spacing

--- a/src/modules/dashboard/components/ExpenditurePage/Stages/StagesButton/StagesButton.css
+++ b/src/modules/dashboard/components/ExpenditurePage/Stages/StagesButton/StagesButton.css
@@ -11,3 +11,7 @@
 .buttonTooltip {
   max-width: 192px;
 }
+
+.buttonWithTooltip {
+  margin-left: 20px;
+}
